[SCRIPT] Updated build.sh to remove unused leftovers